<resources>
    <string name="app_name">GTA_SIRO</string>
    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_account">Account</string>
    <string name="most_liked_product">Most liked products</string>
    <string name="catalog_of_product">Catalog of products</string>
    <string name="all_my_favorites_products">All my favorites products</string>
    <string name="all_my_products_added_to_cart">All my products added to cart</string>
    <string name="my_personnal_account">My personnal account</string>

    <!-- Produit-->
    <string name="product_name">Product name</string>
    <string name="title_product_price">Product price</string>
    <string name="product_price">$ $ $</string>
    <string name="product_description">This is a good product description. This product description is soooooooooo long BLABLABLA.</string>
    <string name="signIn">Sign in</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="create_account">Create account</string>


    <!-- Page d'accueil -->

    <!-- Page de recherche -->

    <!-- Page de favoris-->

    <!-- Page du panier-->

    <!-- Page du compte-->

</resources>