<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_home_page"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        />
    <item
        android:id="@+id/menu_search_page"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        />
    <item
        android:id="@+id/menu_favorites_page"
        android:icon="@drawable/ic_favorties"
        android:title="@string/menu_favorites"
        />
    <item
        android:id="@+id/menu_cart_page"
        android:icon="@drawable/ic_cart"
        android:title="@string/menu_cart"
        />
    <item
        android:id="@+id/menu_account_page"
        android:icon="@drawable/ic_account"
        android:title="@string/menu_account"
        />
</menu>